<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="aboutUs">About Us</string>
    <string name="app_name">Robot Control</string>
    <string name="apple">Little Apple</string>
    <string name="bluetooth_state_connect_failure">Failed to connect Bluetooth devices</string>
    <string name="bluetooth_state_connected">Bluetooh is connected</string>
    <string name="bluetooth_state_connecting">Connecting Bluetooh Device</string>
    <string name="bluetooth_state_disconnected">Disconnect</string>
    <string name="bow">Bow</string>
    <string name="breaking">Breaking</string>
    <string name="btn_standUp">Attention</string>
    <string name="cancel">Cancel</string>
    <string name="champion">Super Champion</string>
    <string name="cheer">Cheer</string>
    <string name="control_mode">Control Mode</string>
    <string name="custom">Custom</string>
    <string name="dialog_action_add_action_requite">Please input action group num</string>
    <string name="dialog_action_add_hint_action">Input action group num</string>
    <string name="dialog_action_add_hint_title">Input action name</string>
    <string name="dialog_action_add_title">Add action</string>
    <string name="dialog_action_add_title_requite">Please input action name</string>
    <string name="dialog_action_modify">Modify action</string>
    <string name="dialog_action_title">Custom</string>
    <string name="dialog_button_modify">Modify custom button</string>
    <string name="dialog_dance_add">Add</string>
    <string name="dialog_dance_add_action_requite">Input dance action</string>
    <string name="dialog_dance_add_can_edit">This item can not be edited</string>
    <string name="dialog_dance_add_failure">operation failed</string>
    <string name="dialog_dance_add_hint_action">Input action group num</string>
    <string name="dialog_dance_add_hint_title">Input dance name</string>
    <string name="dialog_dance_add_success">Add success</string>
    <string name="dialog_dance_add_title">Add dance</string>
    <string name="dialog_dance_add_title_requite">Input dance name</string>
    <string name="dialog_dance_choice">Select</string>
    <string name="dialog_dance_choice_content">Please choose your opearation</string>
    <string name="dialog_dance_delete">Delete</string>
    <string name="dialog_dance_delete_failure">Delete fail</string>
    <string name="dialog_dance_delete_success">Delete success</string>
    <string name="dialog_dance_modify">Modify dance</string>
    <string name="dialog_dance_title">Dance Action</string>
    <string name="dialog_dance_update">Modify</string>
    <string name="dialog_dance_update_success">change success</string>
    <string name="disconnect_tips_connect">Do you want to disconncet the bluetooh device?</string>
    <string name="disconnect_tips_succeed">Bluetooth has been disconnected</string>
    <string name="disconnect_tips_title">Disconnect</string>
    <string name="exit_remind">Click again to exit</string>
    <string name="exit_tips_content">Do you want to disconnect the bluetooh device and exit?</string>
    <string name="exit_tips_title">Tips</string>
    <string name="fantastic">Fantastic Baby</string>
    <string name="feelcool">Feel Cool</string>
    <string name="fight_mode">Fighting mode</string>
    <string name="football_mode">Football mode</string>
    <string name="forwardbox">Box forward</string>
    <string name="gangnam">Gangnam Style</string>
    <string name="lasong">La Song</string>
    <string name="leftfight">Box left</string>
    <string name="lefthook">Hook left</string>
    <string name="leftkick">Kick left</string>
    <string name="leftpass">Pass left</string>
    <string name="more">More</string>
    <string name="mourn">Mourn</string>
    <string name="multi_control">Control All</string>
    <string name="normal_mode">Normal mode</string>
    <string name="ok">Ok</string>
    <string name="open_bluetooth_content">Do you want to open the bluetooh switch?</string>
    <string name="open_bluetooth_title">Open Bluetooh</string>
    <string name="open_bluetooth_unsupported">Your device does not support Bluetooth</string>
    <string name="push_up">Push up</string>
    <string name="re_search">Search again</string>
    <string name="recognize_converting">recognize converting</string>
    <string name="recognize_listening">recognize listening</string>
    <string name="recognize_multi_result">recognize multi result</string>
    <string name="recognize_no_result">recognize no result</string>
    <string name="recovering_success">Recover communication success!</string>
    <string name="reset">Restore Factory Defaults</string>
    <string name="restore_factory_tips">Restoring the factory defaults will delete the action you edited before,please confirm it!</string>
    <string name="restore_status_fail">Data recovery failed, please uninstall the software to re install</string>
    <string name="restore_status_sucess">Data recovery sucess</string>
    <string name="rightfight">Box right</string>
    <string name="righthook">Hook right</string>
    <string name="rightkick">Kick right</string>
    <string name="rightpass">Pass right</string>
    <string name="roll_backward">Roll backward</string>
    <string name="roll_forward">Roll forward</string>
    <string name="search_finished">Search complete</string>
    <string name="search_item_bonded">%1$s （paired）</string>
    <string name="search_menu_title">Search</string>
    <string name="search_stop">Stop searching</string>
    <string name="searching">Searching</string>
    <string name="send_data_fail_reconnect">Send data fail,recovering...</string>
    <string name="send_tips_no_connected">Please conncet the bluetooh device first!</string>
    <string name="set_workmode">Work Mode</string>
    <string name="settings">Settings</string>
    <string name="single_control">Control One</string>
    <string name="sit_up">Sit up</string>
    <string name="squat">Squat</string>
    <string name="squatbox">Box squat</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="take_photos">Take photos</string>
    <string name="tips_bluetooth_not_support">Bluetooth is not available</string>
    <string name="tips_open_bluetooth">Please open bluetooh device first</string>
    <string name="title_activity_voice_info">VoiceInfoActivity</string>
    <string name="touring">Love Touring</string>
    <string name="undefine">Custom</string>
    <string name="version">IME version V4.9</string>
    <string name="voice_add_action_hint">voice add action hint</string>
    <string name="voice_add_action_requite">voice add action requite</string>
    <string name="voice_add_has_content">voice add has content</string>
    <string name="voice_add_has_re_input">voice add has input</string>
    <string name="voice_add_has_title">voice add has title</string>
    <string name="voice_add_name_hint">voice add name hint</string>
    <string name="voice_add_name_requite">voice add name requite</string>
    <string name="voice_add_not_use_pinyin">voice add not use pinyin</string>
    <string name="voice_add_title">voice add title</string>
    <string name="voice_add_use_pinyin">voice add use pinyin</string>
    <string name="voice_add_use_pinyin_for">voice add use pinyin for</string>
    <string name="voice_add_voice_hint">voice add voice hint</string>
    <string name="voice_add_voice_requite">voice add voice requite</string>
    <string name="voice_info">voice info</string>
    <string name="voice_info_accept">voice info accept：%1$s</string>
    <string name="voice_info_action">voice info action：%1$s</string>
    <string name="wave_hands">Wave</string>
    <string name="wave_wings">Wings</string>
    <string name="yongchun">Yong chun</string>
    <string name="youth">Youth</string>
</resources>
