<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/setback" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x10" android:text="@string/settings" style="@style/title_style" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/about" android:background="@drawable/set_item_btn" android:layout_width="@dimen/y60" android:layout_height="@dimen/y32" android:layout_marginTop="@dimen/x10" android:text="@string/about" style="@style/btn_text_style" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/control_mode" android:background="@drawable/set_item_btn" android:layout_width="@dimen/y60" android:layout_height="@dimen/y32" android:layout_marginTop="@dimen/x10" android:text="@string/control_mode" style="@style/btn_text_style" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/work_mode" android:background="@drawable/set_item_btn" android:layout_width="@dimen/y60" android:layout_height="@dimen/y32" android:layout_marginTop="@dimen/x10" android:text="@string/set_workmode" style="@style/btn_text_style" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/reset" android:background="@drawable/set_item_btn" android:layout_width="@dimen/y60" android:layout_height="@dimen/y32" android:layout_marginTop="@dimen/x10" android:text="@string/reset" style="@style/btn_text_style" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/cancel_set" android:background="@drawable/set_item_btn" android:layout_width="@dimen/y60" android:layout_height="@dimen/y32" android:layout_marginTop="@dimen/x10" android:text="@string/cancel" style="@style/btn_text_style" />
</LinearLayout>