<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x10" android:text="@string/dialog_dance_choice" style="@style/title_style" />
        <View android:background="@color/colorTitleBlue" android:layout_width="fill_parent" android:layout_height="1.0px" />
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="2.0">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/y10" android:layout_marginRight="@dimen/y10" android:text="@string/dialog_dance_choice_content" android:layout_centerInParent="true" style="@style/text_style" />
        <View android:background="@color/colorTitleBlue" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:textSize="@dimen/y9" android:textColor="@color/colorTitleBlue" android:id="@id/choose_dialog_delete" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/dialog_dance_delete" android:layout_weight="1.0" android:textAllCaps="false" style="?android:buttonBarButtonStyle" />
        <View android:id="@id/dialog_divider" android:background="@color/colorTitleBlue" android:layout_width="0.5dip" android:layout_height="fill_parent" />
        <Button android:textSize="@dimen/y9" android:textColor="@color/colorTitleBlue" android:id="@id/choose_dialog_modify" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/dialog_dance_update" android:layout_weight="1.0" android:textAllCaps="false" style="?android:buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>