<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x10" android:text="@string/control_mode" style="@style/title_style" />
        <View android:background="@color/colorTitleBlue" android:layout_width="fill_parent" android:layout_height="1.0px" />
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="2.0">
        <Switch android:theme="@style/mySwitch" android:typeface="normal" android:id="@id/controlSwitch" android:layout_width="@dimen/y80" android:layout_height="@dimen/x60" android:checked="false" android:textOn="@string/multi_control" android:textOff="@string/single_control" android:layout_centerInParent="true" android:switchMinWidth="@dimen/y80" />
        <ImageView android:id="@id/single" android:background="?selectableItemBackgroundBorderless" android:layout_width="@dimen/y30" android:layout_height="@dimen/y30" android:layout_marginTop="@dimen/x10" android:src="@drawable/man" android:scaleType="fitCenter" android:layout_toLeftOf="@id/controlSwitch" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/single_control" android:layout_toLeftOf="@id/controlSwitch" android:layout_below="@id/single" style="@style/switch_text_style" />
        <ImageView android:id="@id/multiple" android:background="?selectableItemBackgroundBorderless" android:layout_width="@dimen/y30" android:layout_height="@dimen/y30" android:layout_marginTop="@dimen/x10" android:src="@drawable/men" android:scaleType="fitCenter" android:layout_toRightOf="@id/controlSwitch" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/multi_control" android:layout_toRightOf="@id/controlSwitch" android:layout_below="@id/multiple" style="@style/switch_text_style" />
        <View android:background="@color/colorTitleBlue" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:textSize="@dimen/y9" android:textColor="@color/colorTitleBlue" android:id="@id/control_mode_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" android:textAllCaps="false" style="?android:buttonBarButtonStyle" />
        <View android:id="@id/dialog_divider" android:background="@color/colorTitleBlue" android:layout_width="0.5dip" android:layout_height="fill_parent" />
        <Button android:textSize="@dimen/y9" android:textColor="@color/colorTitleBlue" android:id="@id/control_mode_ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="1.0" android:textAllCaps="false" style="?android:buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>