<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x10" android:text="@string/dialog_dance_title" style="@style/title_style" />
        <View android:background="@color/colorTitleBlue" android:layout_width="fill_parent" android:layout_height="1.0px" />
    </LinearLayout>
    <ListView android:id="@id/dance_list" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:divider="@color/colorTitleBlue" android:dividerHeight="0.5dip" android:layout_weight="4.0" />
    <View android:background="@color/colorTitleBlue" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:textSize="@dimen/y9" android:textColor="@color/colorTitleBlue" android:id="@id/dance_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" android:textAllCaps="false" style="?android:buttonBarButtonStyle" />
        <View android:id="@id/dialog_divider" android:background="@color/colorTitleBlue" android:layout_width="0.5dip" android:layout_height="fill_parent" />
        <Button android:textSize="@dimen/y9" android:textColor="@color/colorTitleBlue" android:id="@id/dance_add" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/dialog_dance_add" android:layout_weight="1.0" android:textAllCaps="false" style="?android:buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>