<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <com.lobot.lobotcontrol.component.CircularProgressView android:id="@id/dialog_search_progress" android:layout_width="@dimen/y18" android:layout_height="@dimen/y18" android:layout_marginLeft="@dimen/y6" android:layout_centerVertical="true" app:cpv_animAutostart="true" app:cpv_color="@color/colorTitleBlue" app:cpv_indeterminate="true" app:cpv_thickness="1.5dip" />
        <TextView android:id="@id/dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/searching" android:layout_centerInParent="true" style="@style/title_style" />
    </RelativeLayout>
    <View android:background="@color/colorTitleBlue" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <ListView android:id="@id/device_list" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:divider="@color/colorTitleBlue" android:dividerHeight="0.5dip" android:layout_weight="4.0" />
    <View android:background="@color/colorTitleBlue" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:textSize="@dimen/y9" android:textColor="@color/colorTitleBlue" android:id="@id/search_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" android:textAllCaps="false" style="?android:buttonBarButtonStyle" />
        <View android:id="@id/dialog_divider" android:background="@color/colorTitleBlue" android:layout_width="0.5dip" android:layout_height="fill_parent" />
        <Button android:textSize="@dimen/y9" android:textColor="@color/colorTitleBlue" android:id="@id/research" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/re_search" android:layout_weight="1.0" android:textAllCaps="false" style="?android:buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>